--- a/README.Rmd
+++ b/README.Rmd
@@ -18,6 +18,8 @@ Este repositorio ha sido creado con el propósito de presentar la sintaxis utili
 
 Estos códigos podrá usarlo cuando el INEI publiqué la ENDES 2024.
 
+Los còdigos se encuentran en el archivo *sc_anemia_endes.R*
+
 <p align="center">
 
 <img src="graficos\tabla_3años.png" width="500px"/>
